# Athena

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/causal/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/causal/agents/: __init__.py  answer_synthesizer.py  complexity_judge.py  evidence_searcher.py  follow_up.py  graph_builder.py  hypothesis_generator.py  hypothesis_ranker.py  question_parser.py  title_generator.py
backend/causal/graph/: pipeline.py
backend/causal/migrations/: 0000_pgvector_extension.py  0001_initial.py  0002_evidence_source_url_to_textfield.py  0003_session_final_answer_references.py
backend/config/: asgi.py  settings.py  urls.py
backend/tests/: conftest.py  test_auth_api.py  test_middleware.py  test_models.py  test_session_api.py  test_settings_api.py  test_usage_api.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_add_language_field.py  0003_add_api_key_fields.py
doc/en/: detail.md
doc/en/backend/: 01_auth.md  (+3 more)
doc/jp/: detail.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  GraphPanel.tsx  LocaleSwitcher.tsx  SessionSidebar.tsx  ToastContainer.tsx  TopBar.tsx
frontend/hooks/: useAuth.ts  useLocale.ts  useSession.ts  useToast.ts  useWebSocket.ts
frontend/lib/: api.ts
(+26 files in other folders)
