[project]
name = "athena"
version = "0.1.0"
description = "Causal inference AI system with knowledge graph visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Django
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "channels>=4.1",
    "channels-redis>=4.2",
    "daphne>=4.1",
    # Database
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # AI / LLM
    "anthropic>=0.42",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "langsmith>=0.2",
    # Search & PDF
    "httpx>=0.27",
    "pymupdf>=1.24",
    # Utils
    "python-dotenv>=1.0",
    "gunicorn>=22.0",
]
